added standing novation concept

--- a/project_technologies.json
+++ b/project_technologies.json
@@ -1,16 +1,19 @@
 {
     "technologies": {
         "apis": [
-            "insert apis"
+            "midi",
+            "youtube",
+            "google image search",
+            "instagram"
         ],
         "platforms": [
-            "insert platforms"
+            "dart / go"
         ],
         "toolkits": [
-            "insert toolkits"
+            "google app engine"
         ]
     },
     "themes": [
-        "insert themes"
+        "say what?"
     ]
 }
