--- a/project_code/package.json
+++ b/project_code/package.json
@@ -14,6 +14,7 @@
     "backbone": "~1.1.2",
     "speaker": "0.0.10",
     "lame": "~1.0.3",
-    "play": "~0.5.0"
+    "play": "~0.5.0",
+    "colors": "~0.6.2"
   }
 }
