added correct tech

--- a/project_technologies.json
+++ b/project_technologies.json
@@ -10,10 +10,12 @@
             "instagram"
         ],
         "platforms": [
-            "chrome apps",
-            "app engine"
+            "google chrome apps",
+            "google app engine"
         ],
         "toolkits": [
+            "node.js",
+            "midi"
         ]
     },
     "themes": [
